MC - Campos nuevos en Liquidacion

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
@@ -129,7 +129,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <br />
+                                <hr />
                                 @if (Model.TipoUnidad != 2)
                                 {
                                     <div class="row clearfix">
@@ -200,7 +200,7 @@
                                         </div>
                                     </div>
                                 }
-
+                                <hr />
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="table-responsive">
                                         <table class="table table-striped table-hover">
@@ -208,10 +208,13 @@
                                                 <tr>
                                                     <th># Ticket</th>
                                                     <th>Tipo</th>
+                                                    <th>Cantidad</th>
+                                                    <th>Precio Unitario</th>
                                                     <th>Descuento</th>
                                                     <th>Subtotal</th>
                                                     <th>IVA</th>
                                                     <th>Total</th>
+
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -222,6 +225,8 @@
                                                         <tr>
                                                             <td>@item.FolioVenta</td>
                                                             <td>@item.Tipo</td>
+                                                            <td>@Math.Truncate(item.CantidadVendida)</td>
+                                                            <td>@item.PrecioUnitario</td>
                                                             <td>@item.Descuento</td>
                                                             <td>@item.Subtotal</td>
                                                             <td>@item.Iva</td>
@@ -233,7 +238,7 @@
                                         </table>
                                     </div>
                                 </div>
-
+                                <hr />
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="row clearfix">
                                         <div class="col-sm-8" style="text-align:right">
