--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/EntradaMercancia.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/EntradaMercancia.cshtml
@@ -101,7 +101,7 @@
                                         <b>Fecha de entrada</b>
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="zmdi zmdi-calendar"></i> </span>
-                                            @Html.TextBoxFor(m => m.FechaEntrada, new { @class = "form-control date", @placeholder = "Ej: 30/07/2018" })
+                                            @Html.TextBoxFor(m => m.FechaEntrada, new { @class = "form-control date", @placeholder = "Ej: 30/07/2018", @disabled = "disabled" })
                                         </div>
                                         @Html.ValidationMessageFor(m => m.FechaEntrada, "", new { @class = "alert-danger" })
                                     </div>
