MC - Ajustes compras

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/_Liquidaciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/_Liquidaciones.cshtml
@@ -20,11 +20,14 @@
         settings.Settings.ShowFooter = true;
         settings.Columns.Add("PuntoVenta", "Punto de venta");
         settings.Columns.Add("OperadorChofer", "Chofer");
+        settings.Columns.Add("UsuarioRecibe", "Cajera");
         settings.Columns.Add("FolioOperacionDia", "Folio liquidación");
-        settings.Columns.Add("VentaTotalCredito", "A credito");
+        //litros venta
         settings.Columns.Add("VentaTotalContado", "De contado");
-        settings.Columns.Add("OtrasVentas", "Otras Ventas");
-        settings.Columns.Add("UsuarioRecibe", "Recibe");
+        settings.Columns.Add("VentaTotalCredito", "A credito");
+        //Bonificaciones
+        //Descuentos
+        //settings.Columns.Add("OtrasVentas", "Otras Ventas");
         settings.Columns.Add("VentaTotal", "Venta total");
     });
 }
