--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CentroCosto/CentroCosto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CentroCosto/CentroCosto.cshtml
@@ -58,14 +58,23 @@
                                     <label>Número</label>
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.Numero, new { @class = "form-control", @placeholder = "Número de centro de costo" })
-                                        @Html.ValidationMessageFor(m => m.Numero, "", new { @class = "alert-danger" })
+
                                     </div>
+                                    <div class="form-group">
+                                        @Html.ValidationMessageFor(m => m.Numero, "", new { @class = "alert-danger" })
+
+                                    </div>
+                                  
                                 </div>
                                 <div class="col-md-6 form-control-label">
                                     <label for="txtDescripcion">Descripción</label>
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.Descripcion, new { @class = "form-control", placeholder = "Descripción", @style = "max-width:initial" })
-                                        @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
+
+                                    </div>
+                                    <div class="form-group">
+                                        @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger", @value=string.Empty })
+
                                     </div>
                                 </div>
                                 <div class="col-md-3 form-control-label">
@@ -116,7 +125,7 @@
                                             }
                                         </select>
                                     </div>
-                                    @Html.ValidationMessageFor(m => m.IdTipoCentroCosto, "", new { @class = "alert-danger" })
+                                    @Html.ValidationMessageFor(m => m.IdEquipoTransporte, "", new { @class = "alert-danger" })
                                 </div>
                                 @*<div class="col-md-3 form-control-label">
                                     <label for="ddlVehiculo">Vehiculo</label>
