--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/CuentaContable.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/CuentaContable.cshtml
@@ -1,5 +1,6 @@
 ﻿@using MVC.Presentacion.Models.Catalogos
-@model CuentaContableModel
+@model MVC.Presentacion.Models.Catalogos.CuentaContableDTO
+
 @Html.DevExpress().GetStyleSheets(
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
             new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
@@ -17,7 +18,8 @@
     <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
     <script src="~/Scripts/js/CuentasContablesJS.js"></script>
 </head>
-<body style="padding-top:10px;">   
+<body style="padding-top:10px;">
+
     @using (Html.BeginForm("Crear", "CuentaContable", FormMethod.Post))
     {
         @Html.HiddenFor(m => m.IdCuentaContable)
@@ -47,15 +49,20 @@
                                     </div>
                                     <Label class="alert-danger" hidden="hidden">Campo requerido</Label>
                                     <div class="form-group">
-                                        @Html.ValidationMessageFor(m => m.IdCuentaContable, "", new { @class = "alert-danger" })
+                                        @*@Html.ValidationMessageFor(m => m.Numero, "", new { @class = "alert-danger",@value=0})
+                                        @Html.HiddenFor(m => m.Numero)*@
                                     </div>
-                                    </div>
+                                </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <b>Descripción</b>
                                         @Html.TextBoxFor(m => m.Descripcion, new { @class = "form-control", placeholder = "Descripción" })
                                     </div>
-                                    <Label class="alert-danger" hidden="hidden">Campo requerido</Label>
+                                    <div class="form-group">
+                                        @*@Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger", @value = string.Empty })*@
+
+                                    </div>
+
                                 </div>
                                 <div class="col-md-1">
                                     <b>&nbsp; </b>
@@ -64,7 +71,7 @@
                                         {
                                             <button btn id="BtnCrear" formaction="Crear" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
                                                 <i class="zmdi zmdi-plus"></i>
-                                            </button>                               
+                                            </button>
                                         }
                                         else
                                         {
@@ -94,9 +101,9 @@
                         <div class="header">
                             Lista de <strong>Cuentas Contables</strong>
                         </div>
-                        <div class="body">                           
+                        <div class="body">
                             <div class="row clearfix blockquote blockquote-info btn-round">
-                                <div class="table-responsive">                                   
+                                <div class="table-responsive">
                                     @Html.Action("Grid")
                                 </div>
                             </div>
@@ -104,7 +111,7 @@
                     </div>
                 </div>
             </div>
-        </section>      
+        </section>
     }
 </body>
 </html>
