--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
@@ -124,9 +124,9 @@
                             }<div style="text-align:center"><strong>Reporte del cliente detallado</strong></div>
                             <div style="text-align:center"><strong>@ViewBag.IdCliente</strong></div>
                             <div class="row clearfix blockquote blockquote-info btn-round">
-
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-hover">
+                                    @Html.Partial("_CarteraVencidaPartial", Model.reportedet)
+                                    @*<table class="table table-striped table-hover">
                                         <thead>
                                             <tr>
                                                 <th>Cliente</th>
@@ -149,9 +149,7 @@
                                             @if (Model != null)
                                             {
                                                 foreach (var item in Model.reportedet)
-                                                {
-                                                    //if(item.Cliente!=""&& item.Cliente != null)
-                                                    //{
+                                                {                                                   
                                                     <tr>
                                                         <td>@item.Nombre</td>
                                                         <td>@item.FechaRegistro</td>
@@ -167,12 +165,11 @@
                                                         <td>@item.Dias32a61</td>
                                                         <td>@item.Dias62a91</td>
                                                         <td>@item.Mas91</td>
-                                                    </tr>
-                                                    //}
+                                                    </tr>                                                   
                                                 }
                                             }
                                         </tbody>
-                                    </table>
+                                    </table>*@
                                 </div>
                             </div><div style="text-align:center"><strong>Global</strong></div>
                             <div class="row clearfix blockquote blockquote-info btn-round">
