JSA Bonificaciones Corte de Caja

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
@@ -274,6 +274,14 @@
                                     </div><br />
                                     <div class="row clearfix">
                                         <div class="col-sm-8" style="text-align:right">
+                                            <b>Bonificaciones:</b>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            @Html.LabelFor(model => model.Bonidificaciones, Model.Bonidificaciones.ToString(), new { @class = "form-control" })
+                                        </div>
+                                    </div><br />
+                                    <div class="row clearfix">
+                                        <div class="col-sm-8" style="text-align:right">
                                             <b>Efectivo a recibir:</b>
                                         </div>
                                         <div class="col-sm-4">
