JSA - Ajustes generales

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -115,8 +115,8 @@
                                 </ul>
                             </li>
                         }
-                        //if (rol.HistoricoVentas)
-                        //{
+                        if (rol.HistoricoVentas)
+                        {
 
                         <li class="menu_dark"><a href="@Url.Action("Index", "Historico")"><i class="material-icons">receipt </i><span class="icon-name">Historico Ventas</span> </a></li>
 
@@ -127,7 +127,7 @@
 
                             </ul>
                         </li>*@
-                        //}
+                        }
                         if (rol.CreditoCobranza)
                         {
                             <li>
