--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -98,7 +98,7 @@
                 </div>
             </div>
         }
-        @if (rol.Ventas)
+        @if (rol.CallCenter)
         {
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12 col-sm-12">
