--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Mantenimiento/_CB_Mantenimientos.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Mantenimiento/_CB_Mantenimientos.cshtml
@@ -33,8 +33,8 @@
         });
         settings.Columns.Add("Id_DetalleMtto", "Id");
         settings.Columns.Add("Vehiculo", "Vehiculo");
-        settings.Columns.Add("DescripcionMtto", "Servicio Realizado").Visible=false;
-        settings.Columns.Add("FechaMtto", "Fecha Servicio").Visible=false;
+        settings.Columns.Add("DescripcionMtto", "Servicio Realizado");
+        settings.Columns.Add("FechaMtto", "Fecha Servicio");
         
         settings.Columns.Add(c =>
         {
